--- a/day2/deployment.yaml
+++ b/day2/deployment.yaml
@@ -20,3 +20,15 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
+        livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
+        readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
